Tue Aug 10 21:40:07 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * docs/templates/vc10.txt:

          Added the "managed" variable.

        * modules/VC8WorkspaceCreator.pm:

          Projects reference were picking up the .filters file for vc10 instead
          of the normal output file (.vcxproj).  For now this is just a
          work-around to remove ".filters" from the relative path to the
          referenced project.

        * templates/vc10.mpd:

          Allow the use of "managed" as a backwards-compatibility synonym for
          "CLRSupport".
          Re-order the nested <%foreach%> loops so that 'platforms' appears
          before 'configurations' (as it does in vc8.mpd).
          DebugInformationFormat is not supported with CLR/managed.
          FixedBaseAddress is not supported with CLR/managed.
          The list of resource files may contain files that are not actually
          passed to the resource compiler (like icons: .ico).  Exclude those
          from <ResourceCompile> but they will still be listed in the project.

Fri Aug  6 14:12:30 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * docs/html/WB26.html:

          Added documentation for -type wb26, this was contributed by
          Johnny Willemsen  <jwillemsen at remedy dot nl>.

        * templates/wb30dll.mpt:
        * templates/wb30exe.mpt:

          Added dollar-Id-dollar in comments.

Fri Aug  6 00:06:41 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * modules/CDT6ProjectCreator.pm:

          Fixed a bug where the template name, in project_file_name, would
          default to an invalid name if the template name was not defined.

        * templates/make.mpd:

          Modified to use the C compiler to compile assembler files (instead
          of the C++ compiler).

Thu Aug  5 19:57:19 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * templates/make.mpd:
        * templates/makedll.mpt:
